# offlinedoctor2

./: AUTOMATION_SUMMARY.md  CHANGELOG.md  CI_TROUBLESHOOTING.md  README.md  RELEASE_GUIDE.md  index.html  install-ollama.sh  package-lock.json  package.json  proxy-server.cjs  setup-backend.sh  setup-git.sh  setup-ollama.sh  tailwind.config.js  test-ollama.html  test-transformers.html  test-transformers.js  validate-release.sh  vite.config.ts
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-version.yml  build-release.yml  ci.yml
backend/: medical_assistant.db  pytest.ini  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/database/: database.py  models.py
backend/app/services/: ai_service.py  medical_service.py
backend/tests/: __init__.py  test_basic.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  supervisord.conf
scripts/: build.sh  ci-check.sh  developer-guide.sh  ensure-ollama.sh  health-check.sh  setup-dev.sh  start-backend.sh  test-all.sh  test-api.sh  test-backend.sh  test-build.sh  test-dev.sh  test-frontend.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  medical_ai.rs  ollama_manager.rs
src/components/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/Pages/: ChatPage.backup.tsx  ChatPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx
src/context/: AppContext.tsx
src/services/: api-tauri.ts  api.ts  ollama.service.ts  transformers.service.ts
src/utils/: debug.ts  platform.ts
