[package]
name = "offline-medical-assistant"
version = "2.0.1"
description = "Offline Medical AI Assistant - Privacy-focused medical guidance application"
authors = ["Medical AI Team <team@offlinemedical.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "temp_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "2.0.1"] }
serde_json = "1"
tokio = { version = "2.0.1"] }
reqwest = { version = "2.0.1"] }
uuid = { version = "2.0.1"] }
chrono = { version = "2.0.1"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.0"
dirs = "5.0"
flate2 = "1.0"
tar = "0.4"

